--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,27 @@
 [build-system]
-requires = ['setuptools>=61.0', 'wheel']
-build-backend = 'setuptools.build_meta'
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = 'autolang'
-version = '0.1.1'
-description = 'A simple python project for simulating finite state automata, formal languages and grammars, and Turing machines.'
-readme = 'README.md'
-license = {file = 'LICENSE'}
+name = "autolang"
+version = "0.1.1"
+description = "A simple python project for simulating finite state automata, formal languages and grammars, and Turing machines."
+readme = "README.md"
+license = {file = "LICENSE"}
 authors = [
-    { name='fawnium', email='oisinlyons1@gmail.com'}
+    { name= "fawnium", email = "oisinlyons1@gmail.com"}
 ]
-requires-python = '>=3.12'
+requires-python = ">=3.12"
+dependencies = [
+    "networkx",
+    "matplotlib"
+]
 
 [project.urls]
-Homepage = 'https://github.com/fawnium/autolang'
+Homepage = "https://github.com/fawnium/autolang"
 
 [tool.setuptools]
-package-dir = {'' = 'src'}
+package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
-where = ['src']
+where = ["src"]
